--- a/css/style-desktop.css
+++ b/css/style-desktop.css
@@ -8,13 +8,13 @@
 /* Basic                                                                         */
 /*********************************************************************************/
 
-@font-face {
-    font-family: 'FontAwesome';
-    src: url('font/fontawesome-webfont.eot');
-    src: url('font/fontawesome-webfont.eot') format('embedded-opentype'), url('fonts/fontawesome-webfont.woff') format('woff'), url('fonts/fontawesome-webfont.ttf') format('truetype'), url('fonts/fontawesome-webfont.svg') format('svg');
-    font-weight: normal;
-    font-style: normal;
-}
+/*@font-face {*/
+    /*font-family: 'FontAwesome';*/
+    /*src: url('font/fontawesome-webfont.eot');*/
+    /*src: url('font/fontawesome-webfont.eot') format('embedded-opentype'), url('fonts/fontawesome-webfont.woff') format('woff'), url('fonts/fontawesome-webfont.ttf') format('truetype'), url('fonts/fontawesome-webfont.svg') format('svg');*/
+    /*font-weight: normal;*/
+    /*font-style: normal;*/
+/*}*/
 
 	body
 	{
