--- a/css/style-desktop.css
+++ b/css/style-desktop.css
@@ -8,19 +8,12 @@
 /* Basic                                                                         */
 /*********************************************************************************/
 
-/*@font-face {*/
-    /*font-family: 'FontAwesome';*/
-    /*src: url('font/fontawesome-webfont.eot');*/
-    /*src: url('font/fontawesome-webfont.eot') format('embedded-opentype'), url('fonts/fontawesome-webfont.woff') format('woff'), url('fonts/fontawesome-webfont.ttf') format('truetype'), url('fonts/fontawesome-webfont.svg') format('svg');*/
-    /*font-weight: normal;*/
-    /*font-style: normal;*/
-/*}*/
-
 	body
 	{
 		font-size: 11pt;
 		line-height: 1.75em;
 		min-width: 1200px;
+        position: relative;
 	}
 	
 	h2
@@ -282,7 +275,7 @@
 				background: #f3f3f3;
 			}
 			
-		#nav > ul > li.active
+		#nav > ul > li.activated
 		{
 		}
 		
@@ -291,11 +284,11 @@
 				background: #f3f3f3;
 			}
 			
-		#nav > ul > li.current_page_item
+		#nav > ul > li.active
 		{
 		}
 		
-			#nav > ul > li.current_page_item > a
+			#nav > ul > li.active > a
 			{
 				background: #d52349;
 				color: #fff !important;
