--- a/css/style-mobile.css
+++ b/css/style-mobile.css
@@ -212,7 +212,7 @@
 /* Wrappers                                                                      */
 /*********************************************************************************/
 
-	#main-wrapper
+	#main-wrapper, #blog-wrapper
 	{
 		padding: 0 10px 0 10px;
 		overflow: hidden;
@@ -257,6 +257,11 @@
 		{
 			height: 3em;
 		}
+
+#contact-me
+{
+    margin-top: 20px;
+}
 	
 /*********************************************************************************/
 /* Intro                                                                         */
@@ -302,7 +307,7 @@
 /* Nav                                                                           */
 /*********************************************************************************/
 
-	#nav
+	#nav .navbar-main
 	{
 		display: none;
 	}
