--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,7 +28,7 @@
 <body class="homepage" id="scroll-area">
 <!--<div >-->
   <!-- Header Wrapper -->
-  <div id="header-wrapper">
+  <div id="header-wrapper" class="headerWrapper">
     <div class="container">
       {%include header.html%}
     </div>
@@ -47,15 +47,17 @@
 
 <script type="application/javascript" src="/js/jquery.js"></script>
 <script type="application/javascript" src="/js/jquery.dropotron.js"></script>
+<script type="application/javascript" src="/js/jquery.smint.js"></script>
 <script type="application/javascript" src="/js/bootstrap.js"></script>
 <script type="application/javascript" src="/js/skel.js"></script>
 <script type="application/javascript" src="/js/skel-panels.js"></script>
-<script type="application/javascript" src="/js/main.js"></script>
 <script type="application/javascript" src="/js/config.js"></script>
+<script type="application/javascript" src="/js/main.js"></script>
 
-<script type="application/javascript">
-  $('body#scroll-area').scrollspy({target: '.navbar-main'});
-</script>
+<!--still working on scrollspy-->
+<!--<script type="application/javascript">-->
+  <!--$('body#scroll-area').scrollspy({target: '.navbar-main'});-->
+<!--</script>-->
 </body>
 
 </html>
