WIP integration of scrollspy

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,5 @@
 <!-- footer wrapper -->
-<div id="footer-wrapper" class="footerWrapper">
+<div id="footer-wrapper" class="footer-wrapper">
     <!-- footer -->
     <section id="footer" class="container">
         <div class="row">
@@ -48,7 +48,7 @@
             </div>
         </div>
 
-        <div id="contact-me" class="row container contactMe">
+        <div id="contact-me" class="row container contact-me">
             <div class="4u">
                 <section>
                     <header>
