--- a/_includes/header.html
+++ b/_includes/header.html
@@ -8,14 +8,14 @@
       <nav id="nav" class="navbar-main">
         <ul>
           {% if page.url == '/index.html' %}
-          <li class="active"><a href="#headerWrapper">Home</a></li>
+          <li class="active"><a href="#header-wrapper">Home</a></li>
           {% else %}
           <li class="active"><a href="{{ base.url }}/">Home</a></li>
           {% endif %}
-          <li><a href="#mainWrapper">My Story</a></li>
-          <li><a href="#blogWrapper">Blog Posts</a></li>
-          <li><a href="#footerWrapper">What I stand for</a></li>
-          <li><a href="#contactMe">Contact</a></li>
+          <li><a href="#my-story">My Story</a></li>
+          <li><a href="#blog-wrapper">Blog Posts</a></li>
+          <li><a href="#footer-wrapper">What I stand for</a></li>
+          <li><a href="#contact-me">Contact</a></li>
         </ul>
       </nav>
       <!-- nav -->
