WIP currently in working state

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -6,7 +6,7 @@
 
       <!-- nav -->
       <nav id="nav" class="navbar-main">
-        <ul>
+        <ul class="nav">
           {% if page.url == '/index.html' %}
           <li class="active"><a href="#header-wrapper">Home</a></li>
           {% else %}
