--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8">
+  <meta http-equiv="content-type" content="text/html; charset=utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=0">
 
@@ -11,7 +11,7 @@
 
 
   <link rel="stylesheet" href="/css/syntax.css">
-  <!--<link rel="stylesheet" href="/css/font-awesome.css">-->
+  <link rel="stylesheet" href="../css/font-awesome.css">
   <noscript>
     <link rel="stylesheet" href="/css/skel-noscript.css"/>
     <link rel="stylesheet" href="/css/style.css"/>
