last save before attempting to move to Jekyll 2.x+

--- a/css/font-awesome.css
+++ b/css/font-awesome.css
@@ -7,6 +7,7 @@
 @font-face {
   font-family: 'FontAwesome';
   src: url('../assets/fonts/fontawesome-webfont.eot');
+  src: url('../assets/fonts/FontAwesome.otf');
   src: url('../assets/fonts/fontawesome-webfont.eot') format('embedded-opentype'), url('../assets/fonts/fontawesome-webfont.woff') format('woff'), url('../assets/fonts/fontawesome-webfont.ttf') format('truetype'), url('../assets/fonts/fontawesome-webfont.svg#fontawesomeregular') format('svg');
   font-weight: normal;
   font-style: normal;
