post and right sidebar posts can be created

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -38,7 +38,7 @@
                 <section>
                     <header>
                         <h2>What my site stands for?</h2>
-                        <a href="#" class="image image-full"><img src="images/pic10.jpg" alt=""></a>
+                        <a href="#" class="image image-full"><img src="/images/pic10.jpg" alt=""></a>
 
                         <p>
                             This is a site that tries to represent Brandon Bailey as best it can.
@@ -55,10 +55,10 @@
                         <h2>Contact me</h2>
                     </header>
                     <ul class="social">
-                        <li><a class="fa fa-facebook solo" href="https://www.facebook.com/Brandon1.Bailey"><span>Facebook</span></a></li>
-                        <li><a class="fa fa-twitter solo" href="https://twitter.com/BcantFindaName"><span>Twitter</span></a></li>
-                        <li><a class="fa fa-linkedin solo" href="http://www.linkedin.com/pub/brandon-bailey/5b/288/373"><span>LinkedIn</span></a></li>
-                        <li><a class="fa fa-google-plus solo" href="http://www.plus.google.com/117610186277394467990"><span>Google+</span></a></li>
+                        <li><a class="fa fa-facebook solo" href="https://www.facebook.com/Brandon1.Bailey" target="_blank"><span>Facebook</span></a></li>
+                        <li><a class="fa fa-twitter solo" href="https://twitter.com/BcantFindaName" target="_blank"><span>Twitter</span></a></li>
+                        <li><a class="fa fa-linkedin solo" href="http://www.linkedin.com/pub/brandon-bailey/5b/288/373" target="_blank"><span>LinkedIn</span></a></li>
+                        <li><a class="fa fa-google-plus solo" href="http://www.plus.google.com/117610186277394467990" target="_blank"><span>Google+</span></a></li>
                     </ul>
 
                     <ul class="contact">
