jekyll updated, added pages for carlin, gerrod and ranaldo, added right sidebar layout

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -111,9 +111,9 @@
                     </h2>
                 </header>
                 <ul class="links">
-                    <li>RIP Ranaldo Butler</li>
-                    <li>RIP Carlin Biles</li>
-                    <li>RIP Gerrod Wislon</li>
+                    <li><a href="/ranaldo-butler.html">Ranaldo Butler</a></li>
+                    <li><a href="/carlin-biles.html">Carlin Biles</a></li>
+                    <li><a href="/gerrod-wilson.html">Gerrod Wislon</a></li>
                 </ul>
             </section>
         </div>
