--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -3,7 +3,7 @@ layout: default
 ---
 
 
-<div id="main-wrapper">
+<div id="main-wrapper" class="main-wrapper-scroll">
   <div class="container">
     <!-- div.row -->
     <div class="row">
