WIP, added github and IG and removed google +

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -56,9 +56,10 @@
                     </header>
                     <ul class="social">
                         <li><a class="fa fa-facebook solo" href="https://www.facebook.com/Brandon1.Bailey" target="_blank"><span>Facebook</span></a></li>
-                        <li><a class="fa fa-twitter solo" href="https://twitter.com/BcantFindaName" target="_blank"><span>Twitter</span></a></li>
+                        <li><a class="fa fa-twitter solo" href="https://www.twitter.com/BcantFindaName" target="_blank"><span>Twitter</span></a></li>
                         <li><a class="fa fa-linkedin solo" href="http://www.linkedin.com/pub/brandon-bailey/5b/288/373" target="_blank"><span>LinkedIn</span></a></li>
-                        <li><a class="fa fa-google-plus solo" href="http://www.plus.google.com/117610186277394467990" target="_blank"><span>Google+</span></a></li>
+                        <li><a class="fa fa-github solo" href="https://www.github.com/dammitBrandon" target="_blank"><span>GitHub</span></a></li>
+                        <li><a class="fa fa-instagram solo" href="https://www.instagram.com/dammitBrandon" target="_blank"><span>Instagram</span></a></li>
                     </ul>
 
                     <ul class="contact">
