WIP configuring s3-website to deploy to aws

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -10,26 +10,12 @@
                     </header>
                     <ul class="dates">
                         <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec dolor turpis, vestibulum non
-                            dui vel, faucibus tempor sem. Nunc faucibus lacus quis porttitor interdum. Duis quis nunc
-                            diam. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos
-                            himenaeos. Mauris non erat aliquet, tristique ante quis, ullamcorper magna. Phasellus
-                            tincidunt, ligula in consequat sollicitudin, turpis velit convallis nisi, nec faucibus mi
-                            libero in neque. Curabitur accumsan lectus ac rutrum faucibus. Nam a diam sollicitudin nisl
-                            congue ultrices. Donec non odio dui.
-
-                            Donec sollicitudin elit quis lorem sagittis suscipit. In faucibus sollicitudin nisl quis
-                            tristique. Sed eget metus ornare, luctus turpis nec, ornare massa. Suspendisse faucibus urna
-                            sed nulla commodo, ac tempus arcu egestas. Fusce hendrerit, felis id mattis porta, massa
-                            arcu luctus sem, ut imperdiet enim nibh id diam. Nam elementum diam non purus eleifend, et
-                            vulputate sapien laoreet. Integer et ornare metus. Suspendisse non metus id nunc rhoncus
-                            molestie eget et neque. Aenean adipiscing consectetur sem, quis tincidunt mauris adipiscing
-                            nec. Nam imperdiet massa sapien, nec lobortis ante mollis vitae. Donec tempus, risus nec
-                            rutrum pretium, nisl mi dignissim erat, eu ultrices neque odio id mi. Etiam a nulla non
-                            turpis sagittis mollis. Nunc condimentum ac nibh non dapibus. Quisque urna erat, egestas
-                            ultricies nunc quis, iaculis dapibus lectus. Nulla adipiscing massa eu enim mollis, interdum
-                            iaculis turpis tristique. Quisque feugiat, lacus ut pharetra tempor, quam neque viverra
-                            nisl, a congue dolor erat ut ipsum.
+                            Throughout my adult life I have placed immense value on relationships, specifically the ones I have with my family and friends.
+                            I work daily to foster those bonds and maintain a strong connection with my loved ones. In addition, I also truly value education,
+                            life-long learning, mentorship and community service. I believe in empathy for others and taking personal responsibility for my actions.
+                            This site will serve as a platform for my journey and I hope to accomplish many goals in this medium, including but not limited to the
+                            obtaining a higher level of self reflection and understanding and a place for me to continue practicing my written communication skills
+                            and ability to convey complex conceptual, ideological and theoretical ideas.
                         </p>
                     </ul>
                 </section>
