--- a/_includes/hero.html
+++ b/_includes/hero.html
@@ -5,7 +5,12 @@
             <a href="#">
                 <span class="image image-full"><img id='home-page-image' alt=""></span>
                 <header>
-                    <span class="byline">A little insight into my world</span>
+                    <span class="byline">
+                        I would like to thank you for visiting my personal footprint on the internet,
+                        where I can share my thoughts and feelings on topics that interest me, such as Software Engineering,
+                        Mechanical Engineering (specifically Motorsports), community enablement and outreach, take a look
+                        around and hopefully I can provide some kind of value to your life.
+                    </span>
                 </header>
             </a>
         </section>
