--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -6,7 +6,7 @@
             <div class="8u">
                 <section>
                     <header>
-                        <h2>Footer Section</h2>
+                        <h2>What I Stand For</h2>
                     </header>
                     <ul class="dates">
                         <p>
@@ -62,12 +62,11 @@
             <div class="4u">
                 <section>
                     <header>
-                        <h2>Placeholder 3</h2>
+                        <h2>Slalom Field Trips</h2>
                     </header>
                     <ul class="divided">
-                        <li><a href="#">Placeholder1</a></li>
-                        <li><a href="#">Placeholder2</a></li>
-                        <li><a href="#">Placeholder3</a></li>
+                        <li><a href="https://drive.google.com/open?id=0B2n7OinNQoRxNFBYam0yN2UxbUk" target="_blank">2016 Visit</a></li>
+                        <li><a href="https://drive.google.com/open?id=0B2n7OinNQoRxcXJRa3F2YzBOLVE" target="_blank">2015 Visit</a></li>
                     </ul>
                 </section>
             </div>
@@ -77,9 +76,7 @@
                         <h2>My Projects</h2>
                     </header>
                     <ul class="divided">
-                        <li><a href="#">Project 1</a></li>
-                        <li><a href="#">Project 2</a></li>
-                        <li><a href="#">Project 3</a></li>
+                        <li><a href="https://github.com/dammitBrandon/hearUs2.0" target="_blank">The Hear Us Project 2.0</a></li>
                     </ul>
                 </section>
             </div>
@@ -98,9 +95,9 @@
                     </h2>
                 </header>
                 <ul class="links">
-                    <li><a href="/ranaldo-butler.html">Ranaldo Butler</a></li>
-                    <li><a href="/carlin-biles.html">Carlin Biles</a></li>
-                    <li><a href="/gerrod-wilson.html">Gerrod Wislon</a></li>
+                    <li><a href="#">Ranaldo Butler</a></li>
+                    <li><a href="#">Carlin Biles</a></li>
+                    <li><a href="#">Gerrod Wislon</a></li>
                 </ul>
             </section>
         </div>
